@@ -1,34 +1,33 @@
 package com.example.bookapi.user;
 
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public enum Role {
 
 
-    USER,
-    ADMIN
 
-
-/*
-
-    USER(Collections.emptySet()),
+    USER(Set.of(
+            Permission.USER_CREATE,
+            Permission.USER_DELETE,
+            Permission.USER_UPDATE,
+            Permission.USER_READ)),
     ADMIN(Set.of(
-            Permission.ADMIN_READ,
-            Permission.ADMIN_UPDATE,
-            Permission.ADMIN_DELETE,
-            Permission.ADMIN_CREATE,
-            Permission.MANAGER_CREATE,
-            Permission.MANAGER_DELETE,
-            Permission.MANAGER_UPDATE,
-            Permission.MANAGER_READ
-    )),
-    MANAGER(Set.of(
-            Permission.MANAGER_CREATE,
-            Permission.MANAGER_DELETE,
-            Permission.MANAGER_UPDATE,
-            Permission.MANAGER_READ
-    )) ;
+          Permission.ADMIN_READ,
+          Permission.ADMIN_UPDATE,
+          Permission.ADMIN_DELETE,
+          Permission.ADMIN_CREATE,
+          Permission.USER_CREATE,
+          Permission.USER_DELETE,
+          Permission.USER_UPDATE,
+          Permission.USER_READ
+          ));
 
 
     @Getter
@@ -37,10 +36,10 @@ public enum Role {
     public List<SimpleGrantedAuthority> getAuthorities(){
         var authorities = getPermissions()
                 .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.name()))
-                .toList();
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
         authorities.add(new SimpleGrantedAuthority("ROLE_"+this.name()));
         return authorities ;
 
-    }*/
+    }
 }
